--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,10 @@ documentation = "https://docs.rs/speedy2d"
 
 [features]
 default = ["windowing", "image-loading", "glutin-default"]
-windowing = ["glutin"]
 image-loading = ["image"]
-glutin-default = ["glutin/x11", "glutin/wayland", "glutin/wayland-dlopen", "glutin/wayland-csd-adwaita"]
-gultin-x11 = ["glutin/x11"]
-gultin-wayland = ["glutin/wayland", "glutin/wayland-dlopen", "glutin/wayland-csd-adwaita"]
+windowing = ["glutin/x11", "glutin/wayland", "glutin/wayland-dlopen", "glutin/wayland-csd-adwaita"]
+windowing-x11 = ["glutin/x11"]
+windowing-wayland = ["glutin/wayland", "glutin/wayland-dlopen", "glutin/wayland-csd-adwaita"]
 
 [dependencies]
 gl = "0.14"
