--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,9 @@ documentation = "https://docs.rs/speedy2d"
 [features]
 default = ["windowing", "image-loading"]
 image-loading = ["image"]
-windowing = ["glutin", "glutin/x11", "glutin/wayland", "glutin/wayland-dlopen", "glutin/wayland-csd-adwaita"]
-windowing-x11 = ["glutin", "glutin/x11"]
-windowing-wayland = ["glutin", "glutin/wayland", "glutin/wayland-dlopen", "glutin/wayland-csd-adwaita"]
+windowing = []
+windowing-x11 = ["glutin/x11"]
+windowing-wayland = ["glutin/wayland", "glutin/wayland-dlopen", "glutin/wayland-csd-adwaita"]
 
 [dependencies]
 gl = "0.14"
