--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ documentation = "https://docs.rs/speedy2d"
 [features]
 default = ["windowing", "image-loading"]
 image-loading = ["image"]
-windowing = []
+windowing = ["glutin"]
 windowing-x11 = ["glutin/x11"]
 windowing-wayland = ["glutin/wayland", "glutin/wayland-dlopen", "glutin/wayland-csd-adwaita"]
 
