--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,18 +16,20 @@ repository = "https://github.com/QuantumBadger/Speedy2D"
 documentation = "https://docs.rs/speedy2d"
 
 [features]
-default = ["windowing", "image-loading"]
+default = ["windowing", "image-loading", "backtrace", "text"]
 image-loading = ["image"]
 windowing = ["glutin"]
 windowing-x11 = ["glutin/x11"]
 windowing-wayland = ["glutin/wayland", "glutin/wayland-dlopen", "glutin/wayland-csd-adwaita"]
+backtrace = ["dep:backtrace"]
+text = ["rusttype"]
 
 [dependencies]
 gl = "0.14"
 glow = "0.7"
 log = "0.4"
-backtrace = "0.3"
-rusttype = { version = "0.9" }
+backtrace = { version = "0.3", optional = true }
+rusttype = { version = "0.9", optional = true }
 unicode-normalization = "0.1"
 num-traits = "0.2"
 earcutr = "0.4.1"
