--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ text = ["glam_rusttype", "unicode-normalization", "basic_rect_packer"]
 [dependencies]
 glow = "0.7"
 glam = "0.23.0"
-glam_rect = { version = "0.1.0", path = "../../glam_rect" }
+glam_rect = { version = "0.1.0", path = "./glam_rect" }
 log = "0.4"
 num-traits = "0.2"
 earcutr = "0.4.1"
@@ -41,8 +41,8 @@ backtrace = { version = "0.3", optional = true }
 
 # For text feature
 unicode-normalization = { version = "0.1", optional = true }
-glam_rusttype = { version = "0.1.0", path = "../../glam_rusttype", optional = true }
-basic_rect_packer = { version = "0.1.0", path = "../../basic_rect_packer", optional = true }
+glam_rusttype = { version = "0.1.0", path = "./glam_rusttype", optional = true }
+basic_rect_packer = { version = "0.1.0", path = "./basic_rect_packer", optional = true }
 
 # For image_loading feature
 image = { version = "0.23", default-features = false, optional = true }
