--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "speedy2d"
-version = "2.0.0"
+version = "2.1.0"
 authors = ["QuantumBadger <speedy2d@redreader.org>"]
 edition = "2021"
 license = "Apache-2.0"
@@ -29,7 +29,7 @@ text = ["glam_rusttype", "unicode-normalization", "basic_rect_packer"]
 
 [dependencies]
 glow = "0.7"
-glam = "0.23.0"
+glam = "^0.25"
 glam_rect = { version = "0.1.0", path = "./glam_rect" }
 log = "0.4"
 num-traits = "0.2"
